assets/css/style.css
/* ... */
/* yellow logo for yellow-on-black theme */
.fl-theme-yb .sjrk-logo {
    background-image: url("../images/sjrk-logo-yellow.svg");
}
.fl-theme-yb .oak-logo {
    background-image: url("../images/sjrk-oak-logo-yellow.png");
}
.fl-theme-yb .idrc-logo {
    background-image: url("../images/sjrk-idrc-logo-yellow.png");
}

/* black logo for black-on-white and black-on-yellow themes */
.fl-theme-bw .sjrk-logo,
.fl-theme-by .sjrk-logo {
    background-image: url("../images/sjrk-logo-black.svg");
}
.fl-theme-bw .oak-logo,
.fl-theme-by .oak-logo {
    background-image: url("../images/sjrk-oak-logo-black.png");
}
.fl-theme-bw .idrc-logo,
.fl-theme-by .idrc-logo {
    background-image: url("../images/sjrk-idrc-logo-black.png");
}

/* light grey logo for light grey and dark grey theme */
.fl-theme-lgdg .sjrk-logo {
    background-image: url("../images/sjrk-logo-grey.svg");
}
.fl-theme-lgdg .oak-logo {
    background-image: url("../images/sjrk-oak-logo-grey.png");
}
.fl-theme-lgdg .idrc-logo {
    background-image: url("../images/sjrk-idrc-logo-grey.png");
}

.fl-theme-by body,
.fl-theme-yb body,
.fl-theme-wb body,
.fl-theme-bw body,
.fl-theme-lgdg body,
.fl-theme-by .featured-resources-collection,
.fl-theme-yb .featured-resources-collection,
.fl-theme-wb .featured-resources-collection,
.fl-theme-bw .featured-resources-collection,
.fl-theme-lgdg .featured-resources-collection,
.fl-theme-by footer,
.fl-theme-yb footer,
.fl-theme-wb footer,
.fl-theme-bw footer,
.fl-theme-lgdg footer {
    background-image: none;
}

.fl-prefsEditor-separatedPanel .fl-prefsEditor-showHide, .fl-prefsEditor-separatedPanel .fl-prefsEditor-reset {
    font-size: 0.7em;
}

/* UIO end */

@media screen and (min-width:500px) {
    nav {
        padding: 2em;
    }
    nav ul li a {
        font-size: 1.5em;
    }
    .cta h1 {
        font-size: 2.1em;
    }
    .cta {
        margin-top: 5em;
    }
    .button {
        font-size: 1.2em;
        letter-spacing: 0.05em;
    }
    .featured-resources-collection {
        margin-top: 10em;
    }
    footer {
        font-size: 1.3em;
    }
    
    footer span {
        font-size: 1em;
    }

    .fl-prefsEditor-separatedPanel .fl-prefsEditor-showHide, .fl-prefsEditor-separatedPanel .fl-prefsEditor-reset {
        font-size: 1em;
    }
}

@media screen and (min-width:500px) and (max-width:800px){
    .featured-resource {
        padding: 1em 1em 0.5em 1em;
    }
}

@media screen and (min-width:600px) {
    nav {
        padding: 2em;
        max-width: 70%;
    }
    .resource-section > button > h2 {
        font-size: 1.4em;
    }
}

@media screen and (min-width: 820px) {
    .container, .footer {
        padding: 2em;
    }

    .text-container h1, .text-container h3 {
        margin-top: 0;
    }

    header {
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
        align-items: center;
    }

    nav ul {
        margin: 0;
        padding: 0;
        display: flex;
    }

    nav ul li {
        list-style: none;
        padding: 0.5em 2em;
    }

    nav ul li a {
        font-size: 1.375em;
        font-weight: 700;
        text-decoration: none;
    }

    .cta {
        padding: 2em 3em;
        max-width: 700px;
    }

    .resource-section {
        padding-top: 1em;
        padding-bottom: 1em;
    }

    .resources-buttons {
        padding-top: 0.5em;
        padding-bottom: 1em;
    }

    .resources-content > p {
        padding-bottom: 2em;
    }

    footer {
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
        align-items: center;
        font-weight: normal;
    }
}

@media screen and (min-width:820px) and (max-width:960px){
    .footer-text {
        padding: 0.5em 0 0.5em 0.5em;
        max-width: 400px;
    }

    .mobile-hidden {
        display: inline;
    }

    .oak-logo {
        width: 50px;
        height: auto;
    }

    .idrc-logo {
        width: 150px;
        height: auto;
    } 
}

@media screen and (min-width:800px) and (max-width:1000px){
    .featured-resource {
        padding: 1em 1em 0.1em 1em;
    }
}

@media screen and (min-width: 942px) {
    .footer-text {
        padding: 0.5em 0 0.5em 0.5em;
        max-width: 487px;
    }

    .mobile-hidden {
        display: inline;
    }

    .oak-logo {
        width: 60px;
        height: auto;
    }

    .idrc-logo {
        width: 200px;
        height: auto;
    }
}

@media screen and (min-width: 1000px) {
    .featured-resources-collection {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
    }
    
    .featured-resource {
        margin: 0 2% 3.750em 2%;
        width: 23%;
    }
}

